--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,95 +1,113 @@
-2020-12-21 新潟大学・システムソフトウェア・並列分散処理 #jobhunt due:2020-01-14
-2020-12-21 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2020-12-21 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2020-12-21 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2020-12-21 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2020-12-21 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
-2020-12-21 ★NetSoft@Tokyo #deadlines due:2020-12-14
-2020-12-21 (J)MDPI.IoE #deadlines due:2020-12-15
-2020-12-21 IEEE.GI(infocom).global.internet #deadlines due:2020-12-15
-2020-12-21 INFOCOM #deadlines due:2020-12-15
-2020-12-21 INFOCOMw.security.privacy.bigdata #deadlines due:2020-12-15
-2020-12-21 NextGenSys(NGS) #deadlines due:2020-12-15
-2020-12-21 PerCom.(pervasive).demos #deadlines due:2020-12-15
-2020-12-21 ★IEEE.ACM.CCGrid #deadlines due:2020-12-15
-2020-12-21 (J)MDPI.smart.sensing.D2D #deadlines due:2020-12-20
-2020-12-21 ★ⒿIJITS.infotech.and.security #deadlines due:2020-12-20
-2020-12-21 (J)Elsevier.IoT.for.COVID19 #deadlines due:2020-12-21
-2020-12-21 (J)Springer.JONS.netmng.with.AI #deadlines due:2020-12-21
-2020-12-21 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2020-12-21
-2020-12-21 kindle #current due:2020-12-21
-2020-12-21 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2020-12-21
-2020-12-21 wifi dongle @ home #current due:2020-12-21
-2020-12-21 (3) docomocycle data collect #regulars due:2020-12-28
-2020-12-21 ① money (weekly) #regulars due:2020-12-28
-2020-12-21 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2020-12-28
-2020-12-21 東日本国際大学・情報学 #jobhunt due:2020-12-30
-2020-12-21 (J)Elsevier(IoT.attacks) #deadlines due:2020-12-31
-2020-12-21 (J)MDPI.Sensing.and.IoT #deadlines due:2020-12-31
-2020-12-21 (J)MDPI.WirelessSensors.ITS #deadlines due:2020-12-31
-2020-12-21 audio automation for open campus #midterm due:2020-12-31
-2020-12-21 kgu zemi faces #midterm due:2020-12-31
-2020-12-21 samsung redo cygwin #midterm due:2020-12-31
-2020-12-21 simplify yalms #midterm due:2020-12-31
-2020-12-21 tokyo hotels and schedule #midterm due:2020-12-31
-2020-12-21 video recognition engine (sotsuken) #midterm due:2020-12-31
-2020-12-21 ⒿMDPI.edge.drone.swarms #deadlines due:2020-12-31
-2020-12-21 ★ⒿElectronics.IoT #deadlines due:2020-12-31
-2020-12-21 リージョナルフィッシュ株式会社・ゲノム編集水産育種のバイオインフォマティクス研究員の募集【リモートワーク可】 #jobhunt due:2020-12-31
-2020-12-21 (J)ComMag.Network4Covid #deadlines due:2021-01-01
-2020-12-21 IEEE.ICFEC.fog.edge #deadlines due:2021-01-03
-2020-12-21 IEEE.ICDCS.distributed.comp.systems #deadlines due:2021-01-06
-2020-12-21 EAI.Mobimedia.mobilemultimedia #deadlines due:2021-01-07
-2020-12-21 ITS(IM).autonomous.vehicles #deadlines due:2021-01-08
-2020-12-21 足利大学工学部・機械分野【再公募】 #jobhunt due:2021-01-08
-2020-12-21 jour.ICTexpress.edge #deadlines due:2021-01-10
-2020-12-21 ⒿICTExpress.mobile.edge.comp #deadlines due:2021-01-10
-2020-12-21 (J)ASOC.CompIntel.(transformative) #deadlines due:2021-01-15
-2020-12-21 (J)Elsevier.ASOC.transformative.computing #deadlines due:2021-01-15
-2020-12-21 (J)MDPI.Sensors.human.motion #deadlines due:2021-01-15
-2020-12-21 COMPSAC.intel.collab.world #deadlines due:2021-01-15
-2020-12-21 IEEE.WTMC.traffic.measurement #deadlines due:2021-01-15
-2020-12-21 IEEE.WTMC.trafficmeasurement4sec #deadlines due:2021-01-15
-2020-12-21 IFIP.Networking #deadlines due:2021-01-15
-2020-12-21 J.Elsevier.compintelligence #deadlines due:2021-01-15
-2020-12-21 journal.ISF.AI.for.covid #deadlines due:2021-01-15
-2020-12-21 東京工業大学・理論計算機科学・サイバーセキュリティ分野 #jobhunt due:2021-01-17
-2020-12-21 ACM.SIGCOMM #deadlines due:2021-01-20
-2020-12-21 ICC.GreenSmartEnvs #deadlines due:2021-01-20
-2020-12-21 ICCw.DDINS.intelligence4nets #deadlines due:2021-01-20
-2020-12-21 IEEE.ICC.emerging.topics.in.6G #deadlines due:2021-01-20
-2020-12-21 adobe @ work, home #longterm due:2021-01-20
-2020-12-21 windows auth @ zaniya #longterm due:2021-01-20
-2020-12-21 足利大学・人工知能関連分野【再公募】 #jobhunt due:2021-01-29
-2020-12-21 足利大学・工学部・情報工学、情報科学センター【再公募】 #jobhunt due:2021-01-29
-2020-12-21 足利大学工学部・人工知能関連分野【再公募】 #jobhunt due:2021-01-29
-2020-12-21 (J)EAI.GeneralCollectiveIntelligence #deadlines due:2021-01-30
-2020-12-21 (J)Springer.AI4people #deadlines due:2021-01-31
-2020-12-21 MDPI.sustain #deadlines due:2021-01-31
-2020-12-21 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
-2020-12-21 金城学院大学・生活環境学部生活マネジメント学科・情報学 #jobhunt due:2021-02-01
-2020-12-21 INFOCOM.demos.posters #deadlines due:2021-02-07
-2020-12-21 東京工業大学・ソフトウェア工学分野 #jobhunt due:2021-02-09
-2020-12-21 (J)MDPI.Signals.cybersec.resilience #deadlines due:2021-02-15
-2020-12-21 (J)JCN.covid19 #deadlines due:2021-02-20
-2020-12-21 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
-2020-12-21 (J)MDPI.mobile.computing #deadlines due:2021-02-21
-2020-12-21 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
-2020-12-21 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
-2020-12-21 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
-2020-12-21 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
-2020-12-21 株式会社ベイシスコンサルティング・リサーチャー募集 #jobhunt due:2021-02-28
-2020-12-21 ficloud.future.cloud #deadlines due:2021-03-10
-2020-12-21 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
-2020-12-21 KSEM.knowledge #deadlines due:2021-03-15
-2020-12-21 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
-2020-12-21 香川大学・創造工学部・情報通信コース #jobhunt due:2021-03-19
-2020-12-21 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
-2020-12-21 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
-2020-12-21 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
-2020-12-21 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
-2020-12-21 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
-2020-12-21 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
-2020-12-21 鳥取大学工学部教員公募・ロボティクス #jobhunt due:2021-03-31
-2020-12-21 岡山理科大学・計算機工学・コンピュータシステム分野 #jobhunt due:2021-05-10
-2020-12-21 ⒿMDPI.HPC.math #deadlines due:2021-06-30
+2021-01-16 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2021-01-16 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2021-01-16 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2021-01-16 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2021-01-16 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
+2021-01-16 ★NetSoft@Tokyo #deadlines due:2020-12-14
+2021-01-16 (J)MDPI.IoE #deadlines due:2020-12-15
+2021-01-16 IEEE.GI(infocom).global.internet #deadlines due:2020-12-15
+2021-01-16 INFOCOM #deadlines due:2020-12-15
+2021-01-16 INFOCOMw.security.privacy.bigdata #deadlines due:2020-12-15
+2021-01-16 NextGenSys(NGS) #deadlines due:2020-12-15
+2021-01-16 PerCom.(pervasive).demos #deadlines due:2020-12-15
+2021-01-16 ★IEEE.ACM.CCGrid #deadlines due:2020-12-15
+2021-01-16 (J)MDPI.smart.sensing.D2D #deadlines due:2020-12-20
+2021-01-16 ★ⒿIJITS.infotech.and.security #deadlines due:2020-12-20
+2021-01-16 (J)Elsevier.IoT.for.COVID19 #deadlines due:2020-12-21
+2021-01-16 (J)Springer.JONS.netmng.with.AI #deadlines due:2020-12-21
+2021-01-16 (J)Elsevier(IoT.attacks) #deadlines due:2020-12-31
+2021-01-16 (J)MDPI.Sensing.and.IoT #deadlines due:2020-12-31
+2021-01-16 (J)MDPI.WirelessSensors.ITS #deadlines due:2020-12-31
+2021-01-16 ⒿMDPI.edge.drone.swarms #deadlines due:2020-12-31
+2021-01-16 ★ⒿElectronics.IoT #deadlines due:2020-12-31
+2021-01-16 (J)ComMag.Network4Covid #deadlines due:2021-01-01
+2021-01-16 IEEE.ICFEC.fog.edge #deadlines due:2021-01-03
+2021-01-16 IEEE.ICDCS.distributed.comp.systems #deadlines due:2021-01-06
+2021-01-16 EAI.Mobimedia.mobilemultimedia #deadlines due:2021-01-07
+2021-01-16 ITS(IM).autonomous.vehicles #deadlines due:2021-01-08
+2021-01-16 jour.ICTexpress.edge #deadlines due:2021-01-10
+2021-01-16 ⒿICTExpress.mobile.edge.comp #deadlines due:2021-01-10
+2021-01-16 新潟大学・システムソフトウェア・並列分散処理 #jobhunt due:2021-01-14
+2021-01-16 (J)ASOC.CompIntel.(transformative) #deadlines due:2021-01-15
+2021-01-16 (J)Elsevier.ASOC.transformative.computing #deadlines due:2021-01-15
+2021-01-16 (J)MDPI.Sensors.human.motion #deadlines due:2021-01-15
+2021-01-16 COMPSAC.intel.collab.world #deadlines due:2021-01-15
+2021-01-16 IEEE.WTMC.traffic.measurement #deadlines due:2021-01-15
+2021-01-16 IEEE.WTMC.trafficmeasurement4sec #deadlines due:2021-01-15
+2021-01-16 IFIP.Networking #deadlines due:2021-01-15
+2021-01-16 J.Elsevier.compintelligence #deadlines due:2021-01-15
+2021-01-16 journal.ISF.AI.for.covid #deadlines due:2021-01-15
+2021-01-16 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2021-01-16
+2021-01-16 kindle #current due:2021-01-16
+2021-01-16 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2021-01-16
+2021-01-16 wifi dongle @ home #current due:2021-01-16
+2021-01-16 東京工業大学・理論計算機科学・サイバーセキュリティ分野 #jobhunt due:2021-01-17
+2021-01-16 ACM.SIGCOMM #deadlines due:2021-01-20
+2021-01-16 ICC.GreenSmartEnvs #deadlines due:2021-01-20
+2021-01-16 ICCw.DDINS.intelligence4nets #deadlines due:2021-01-20
+2021-01-16 IEEE.ICC.emerging.topics.in.6G #deadlines due:2021-01-20
+2021-01-16 (3) docomocycle data collect #regulars due:2021-01-23
+2021-01-16 ① money (weekly) #regulars due:2021-01-23
+2021-01-16 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2021-01-23
+2021-01-16 audio automation for open campus #midterm due:2021-01-26
+2021-01-16 kgu zemi faces #midterm due:2021-01-26
+2021-01-16 samsung redo cygwin #midterm due:2021-01-26
+2021-01-16 simplify yalms #midterm due:2021-01-26
+2021-01-16 tokyo hotels and schedule #midterm due:2021-01-26
+2021-01-16 video recognition engine (sotsuken) #midterm due:2021-01-26
+2021-01-16 足利大学・人工知能関連分野 #jobhunt due:2021-01-29
+2021-01-16 足利大学・人工知能関連分野【再公募】 #jobhunt due:2021-01-29
+2021-01-16 足利大学・工学部・情報工学、情報科学センター【再公募】 #jobhunt due:2021-01-29
+2021-01-16 足利大学・工学部・教員の公募（人工知能関連分野）【再公募】 #jobhunt due:2021-01-29
+2021-01-16 足利大学・工学部・教員の公募（情報工学、情報科学センター）【再公募】 #jobhunt due:2021-01-29
+2021-01-16 足利大学工学部・人工知能関連分野【再公募】 #jobhunt due:2021-01-29
+2021-01-16 (J)EAI.GeneralCollectiveIntelligence #deadlines due:2021-01-30
+2021-01-16 (J)Springer.AI4people #deadlines due:2021-01-31
+2021-01-16 MDPI.sustain #deadlines due:2021-01-31
+2021-01-16 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
+2021-01-16 金城学院大学・生活環境学部生活マネジメント学科・専任教員の公募（情報学） #jobhunt due:2021-02-01
+2021-01-16 金城学院大学・生活環境学部生活マネジメント学科・情報学 #jobhunt due:2021-02-01
+2021-01-16 静岡理工科大学・ソフトウェア開発・知能情報・感性情報処理 #jobhunt due:2021-02-01
+2021-01-16 静岡理工科大学・講師・准教授・または教授の公募（電子機械制御分野） #jobhunt due:2021-02-01
+2021-01-16 静岡理工科大学（ソフトウェア開発を基盤とする、知能情報や感性情報処理に関連する分野） #jobhunt due:2021-02-01
+2021-01-16 データサイエンス関連科目 #jobhunt due:2021-02-05
+2021-01-16 日本大学・専任教員（教授）の公募（データサイエンス関連科目） #jobhunt due:2021-02-05
+2021-01-16 INFOCOM.demos.posters #deadlines due:2021-02-07
+2021-01-16 東京工業大学・ソフトウェア工学分野 #jobhunt due:2021-02-09
+2021-01-16 東京工業大学・教授の公募（ソフトウェア工学分野） #jobhunt due:2021-02-09
+2021-01-16 (J)MDPI.Signals.cybersec.resilience #deadlines due:2021-02-15
+2021-01-16 adobe @ work, home #longterm due:2021-02-15
+2021-01-16 windows auth @ zaniya #longterm due:2021-02-15
+2021-01-16 (J)JCN.covid19 #deadlines due:2021-02-20
+2021-01-16 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
+2021-01-16 (J)MDPI.mobile.computing #deadlines due:2021-02-21
+2021-01-16 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
+2021-01-16 大阪大学・機械工学・情報学 #jobhunt due:2021-02-25
+2021-01-16 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
+2021-01-16 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
+2021-01-16 国際基督教大学・人間情報学・情報学フロンティアor情報学基礎 #jobhunt due:2021-02-28
+2021-01-16 国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
+2021-01-16 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
+2021-01-16 東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
+2021-01-16 株式会社ベイシスコンサルティング・リサーチャー募集 #jobhunt due:2021-02-28
+2021-01-16 ficloud.future.cloud #deadlines due:2021-03-10
+2021-01-16 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
+2021-01-16 KSEM.knowledge #deadlines due:2021-03-15
+2021-01-16 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
+2021-01-16 香川大学・創造工学部 准教授・講師または助教の公募（情報通信コース） #jobhunt due:2021-03-19
+2021-01-16 香川大学・創造工学部・情報通信コース #jobhunt due:2021-03-19
+2021-01-16 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
+2021-01-16 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
+2021-01-16 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
+2021-01-16 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
+2021-01-16 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
+2021-01-16 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
+2021-01-16 鳥取大学工学部教員公募・ロボティクス #jobhunt due:2021-03-31
+2021-01-16 鳥取大学工学部教員公募（ロボティクス） #jobhunt due:2021-03-31
+2021-01-16 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
+2021-01-16 岩手大学・知能・メディア情報コース 准教授公募（知能情報学関連分野） #jobhunt due:2021-04-30
+2021-01-16 知能情報学関連分野 #jobhunt due:2021-04-30
+2021-01-16 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
+2021-01-16 岡山理科大学・計算機工学・コンピュータシステム分野 #jobhunt due:2021-05-10
+2021-01-16 ⒿMDPI.HPC.math #deadlines due:2021-06-30
+2021-01-16 株式会社キーウォーカー【AI企業】自然言語処理研究員・エンジニア募集 #jobhunt due:2021-06-30
