--- a/gcal/todo.txt
+++ b/gcal/todo.txt
@@ -1,108 +1,103 @@
-2021-01-18 三谷産業フェア★金沢 #fundhunt due:2020-09-01
-2021-01-18 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
-2021-01-18 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
-2021-01-18 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
-2021-01-18 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
-2021-01-18 EAI.GreeNets.greenenergy #deadlines due:2021-01-18
-2021-01-18 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2021-01-18
-2021-01-18 kindle #current due:2021-01-18
-2021-01-18 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2021-01-18
-2021-01-18 wifi dongle @ home #current due:2021-01-18
-2021-01-18 (J)MDPI.human.computer.interaction #deadlines due:2021-01-20
-2021-01-18 ACM.HotMobile #deadlines due:2021-01-20
-2021-01-18 ACM.SIGCOMM #deadlines due:2021-01-20
-2021-01-18 ICCw.DDINS.intelligence4nets #deadlines due:2021-01-20
-2021-01-18 ICCw.SAGE.smart.green.solutions #deadlines due:2021-01-20
-2021-01-18 ICCw.data.driven.nets #deadlines due:2021-01-20
-2021-01-18 IEEE.ICC.emerging.topics.in.6G #deadlines due:2021-01-20
-2021-01-18 ACM.computing.frontiers #deadlines due:2021-01-21
-2021-01-18 IEEE.5GloTrials.IoT #deadlines due:2021-01-21
-2021-01-18 IFIP.Networking #deadlines due:2021-01-21
-2021-01-18 IM.IoT #deadlines due:2021-01-22
-2021-01-18 ACM.IEEE.fog.and.edge #deadlines due:2021-01-24
-2021-01-18 (3) docomocycle data collect #regulars due:2021-01-25
-2021-01-18 ① money (weekly) #regulars due:2021-01-25
-2021-01-18 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2021-01-25
-2021-01-18 ACM.IoTDI #deadlines due:2021-01-26
-2021-01-18 audio automation for open campus #midterm due:2021-01-28
-2021-01-18 kgu zemi faces #midterm due:2021-01-28
-2021-01-18 samsung redo cygwin #midterm due:2021-01-28
-2021-01-18 simplify yalms #midterm due:2021-01-28
-2021-01-18 tokyo hotels and schedule #midterm due:2021-01-28
-2021-01-18 video recognition engine (sotsuken) #midterm due:2021-01-28
-2021-01-18 SpringerLNCS.DAIS.distributed.apps #deadlines due:2021-01-29
-2021-01-18 足利大学・工学部・教員の公募（人工知能関連分野）【再公募】 #jobhunt due:2021-01-29
-2021-01-18 足利大学・工学部・教員の公募（情報工学、情報科学センター）【再公募】 #jobhunt due:2021-01-29
-2021-01-18 (J)EAI.GeneralCollectiveIntelligence #deadlines due:2021-01-30
-2021-01-18 COMPSAC #deadlines due:2021-01-30
-2021-01-18 (J)ICT.express.mobile.edge.systems #deadlines due:2021-01-31
-2021-01-18 (J)IET.SmartCities.IoT.sensing.sustain #deadlines due:2021-01-31
-2021-01-18 (J)Springer.AI4people #deadlines due:2021-01-31
-2021-01-18 MDPI.sustain #deadlines due:2021-01-31
-2021-01-18 東京通信大学・情報システム・データサイエンス分野 #jobhunt due:2021-01-31
-2021-01-18 (BOOK)CambridgeScholars.proposal #deadlines due:2021-02-01
-2021-01-18 IEEE.HPSC.highperfcomp #deadlines due:2021-02-01
-2021-01-18 IEEE.HPSR.highperf.routing.switching #deadlines due:2021-02-01
-2021-01-18 IEEE.IDS.datasecurity #deadlines due:2021-02-01
-2021-01-18 IEEE.sec.and.clouds #deadlines due:2021-02-01
-2021-01-18 金城学院大学・生活環境学部生活マネジメント学科・専任教員の公募（情報学） #jobhunt due:2021-02-01
-2021-01-18 静岡理工科大学・講師・准教授・または教授の公募（電子機械制御分野） #jobhunt due:2021-02-01
-2021-01-18 静岡理工科大学（ソフトウェア開発を基盤とする、知能情報や感性情報処理に関連する分野） #jobhunt due:2021-02-01
-2021-01-18 IEEE.ICAS.autonomous.systems #deadlines due:2021-02-03
-2021-01-18 ACM.SIGMODw.bigdata.dist.envs #deadlines due:2021-02-04
-2021-01-18 IEEE.ComSoc.CQR.quality.reliability #deadlines due:2021-02-05
-2021-01-18 日本大学・専任教員（教授）の公募（データサイエンス関連科目） #jobhunt due:2021-02-05
-2021-01-18 IFIP.newtech.mobility.sec #deadlines due:2021-02-07
-2021-01-18 INFOCOM.demos.posters #deadlines due:2021-02-07
-2021-01-18 (+J)SAM.security.management #deadlines due:2021-02-08
-2021-01-18 東京工業大学・教授の公募（ソフトウェア工学分野） #jobhunt due:2021-02-09
-2021-01-18 (J)MDPI.Sensors.IoT #deadlines due:2021-02-15
-2021-01-18 (J)MDPI.Signals.cybersec.resilience #deadlines due:2021-02-15
-2021-01-18 EAI.WiCOM.wireless #deadlines due:2021-02-15
-2021-01-18 IEEE.ACM.IWQoS.qos #deadlines due:2021-02-15
-2021-01-18 adobe @ work, home #longterm due:2021-02-17
-2021-01-18 windows auth @ zaniya #longterm due:2021-02-17
-2021-01-18 (J)JCN.covid19 #deadlines due:2021-02-20
-2021-01-18 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
-2021-01-18 (J)MDPI.mobile.computing #deadlines due:2021-02-21
-2021-01-18 LANMAN.networking.is.new.normal #deadlines due:2021-02-22
-2021-01-18 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
-2021-01-18 大阪大学・機械工学・情報学 #jobhunt due:2021-02-25
-2021-01-18 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
-2021-01-18 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
-2021-01-18 国際基督教大学・人間情報学・情報学フロンティアor情報学基礎 #jobhunt due:2021-02-28
-2021-01-18 国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
-2021-01-18 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
-2021-01-18 東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
-2021-01-18 株式会社ベイシスコンサルティング・リサーチャー募集 #jobhunt due:2021-02-28
-2021-01-18 (J)IEET.green.internet.and.services #deadlines due:2021-03-01
-2021-01-18 (J)Springer.queueing.learning.control #deadlines due:2021-03-01
-2021-01-18 ficloud.future.cloud #deadlines due:2021-03-10
-2021-01-18 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
-2021-01-18 (J)MDPI.drone.swarms #deadlines due:2021-03-15
-2021-01-18 BRAINS.blockchain #deadlines due:2021-03-15
-2021-01-18 CloudConf.KSEM@tokyo #deadlines due:2021-03-15
-2021-01-18 KSEM.knowledge #deadlines due:2021-03-15
-2021-01-18 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
-2021-01-18 香川大学・創造工学部 准教授・講師または助教の公募（情報通信コース） #jobhunt due:2021-03-19
-2021-01-18 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
-2021-01-18 IFIP.future.internet.transport #deadlines due:2021-03-25
-2021-01-18 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
-2021-01-18 (J)JNSM.beyond5G #deadlines due:2021-03-30
-2021-01-18 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
-2021-01-18 (J)ACMtran.comp.ling.multimedia.IoT #deadlines due:2021-03-31
-2021-01-18 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
-2021-01-18 (J)Elsevier.smart.veh.in.6G #deadlines due:2021-03-31
-2021-01-18 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
-2021-01-18 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
-2021-01-18 鳥取大学工学部教員公募（ロボティクス） #jobhunt due:2021-03-31
-2021-01-18 ITC.teletraffic.congress #deadlines due:2021-04-02
-2021-01-18 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
-2021-01-18 岩手大学・知能・メディア情報コース 准教授公募（知能情報学関連分野） #jobhunt due:2021-04-30
-2021-01-18 知能情報学関連分野 #jobhunt due:2021-04-30
-2021-01-18 ACM.GoodIT #deadlines due:2021-05-01
-2021-01-18 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
-2021-01-18 (J)wiley.SPE.highperfcomp.apps #deadlines due:2021-05-31
-2021-01-18 ⒿMDPI.HPC.math #deadlines due:2021-06-30
-2021-01-18 株式会社キーウォーカー【AI企業】自然言語処理研究員・エンジニア募集 #jobhunt due:2021-06-30
-2021-01-18 (J)BigDataJournal.perfmanagment.large.clusters #deadlines due:2021-07-31
+2021-01-30 三谷産業フェア★金沢 #fundhunt due:2020-09-01
+2021-01-30 本多記念賞200万・50万・30万.2items #fundhunt due:2020-09-11
+2021-01-30 airpf人工知能研究振興財団 #fundhunt due:2020-09-30
+2021-01-30 兵庫県立大学.情報学-情報通信-ネットワーク #jobhunt due:2020-09-30
+2021-01-30 ▲愛知工科大学・データサイエンスまたはＡＩ #jobhunt due:2020-10-16
+2021-01-30 EAI.GreeNets.greenenergy #deadlines due:2021-01-18
+2021-01-30 (J)MDPI.human.computer.interaction #deadlines due:2021-01-20
+2021-01-30 ACM.HotMobile #deadlines due:2021-01-20
+2021-01-30 ACM.SIGCOMM #deadlines due:2021-01-20
+2021-01-30 ICCw.DDINS.intelligence4nets #deadlines due:2021-01-20
+2021-01-30 ICCw.SAGE.smart.green.solutions #deadlines due:2021-01-20
+2021-01-30 ICCw.data.driven.nets #deadlines due:2021-01-20
+2021-01-30 IEEE.ICC.emerging.topics.in.6G #deadlines due:2021-01-20
+2021-01-30 ACM.computing.frontiers #deadlines due:2021-01-21
+2021-01-30 IEEE.5GloTrials.IoT #deadlines due:2021-01-21
+2021-01-30 IFIP.Networking #deadlines due:2021-01-21
+2021-01-30 IM.IoT #deadlines due:2021-01-22
+2021-01-30 ACM.IEEE.fog.and.edge #deadlines due:2021-01-24
+2021-01-30 ACM.IoTDI #deadlines due:2021-01-26
+2021-01-30 SpringerLNCS.DAIS.distributed.apps #deadlines due:2021-01-29
+2021-01-30 (J)EAI.GeneralCollectiveIntelligence #deadlines due:2021-01-30
+2021-01-30 COMPSAC #deadlines due:2021-01-30
+2021-01-30 classes ① johokiso (blockchain, eval), ② netchino (schedule) #current due:2021-01-30
+2021-01-30 kindle #current due:2021-01-30
+2021-01-30 purchases ① sdcards, ② 2 raspberries, ③ magnet plugs #current due:2021-01-30
+2021-01-30 wifi dongle @ home #current due:2021-01-30
+2021-01-30 (J)ICT.express.mobile.edge.systems #deadlines due:2021-01-31
+2021-01-30 (J)IET.SmartCities.IoT.sensing.sustain #deadlines due:2021-01-31
+2021-01-30 (J)Springer.AI4people #deadlines due:2021-01-31
+2021-01-30 MDPI.sustain #deadlines due:2021-01-31
+2021-01-30 (BOOK)CambridgeScholars.proposal #deadlines due:2021-02-01
+2021-01-30 IEEE.HPSC.highperfcomp #deadlines due:2021-02-01
+2021-01-30 IEEE.HPSR.highperf.routing.switching #deadlines due:2021-02-01
+2021-01-30 IEEE.IDS.datasecurity #deadlines due:2021-02-01
+2021-01-30 IEEE.sec.and.clouds #deadlines due:2021-02-01
+2021-01-30 ●静岡理工科大学（ソフトウェア開発を基盤とする、知能情報や感性情報処理に関連する分野） #jobhunt due:2021-02-01
+2021-01-30 IEEE.ICAS.autonomous.systems #deadlines due:2021-02-03
+2021-01-30 ACM.SIGMODw.bigdata.dist.envs #deadlines due:2021-02-04
+2021-01-30 IEEE.ComSoc.CQR.quality.reliability #deadlines due:2021-02-05
+2021-01-30 日本大学・専任教員（教授）の公募（データサイエンス関連科目） #jobhunt due:2021-02-05
+2021-01-30 (3) docomocycle data collect #regulars due:2021-02-06
+2021-01-30 ① money (weekly) #regulars due:2021-02-06
+2021-01-30 ② jobhunt, fundhunt, cfp (weekly) #regulars due:2021-02-06
+2021-01-30 IFIP.newtech.mobility.sec #deadlines due:2021-02-07
+2021-01-30 INFOCOM.demos.posters #deadlines due:2021-02-07
+2021-01-30 (+J)SAM.security.management #deadlines due:2021-02-08
+2021-01-30 audio automation for open campus #midterm due:2021-02-09
+2021-01-30 kgu zemi faces #midterm due:2021-02-09
+2021-01-30 samsung redo cygwin #midterm due:2021-02-09
+2021-01-30 simplify yalms #midterm due:2021-02-09
+2021-01-30 tokyo hotels and schedule #midterm due:2021-02-09
+2021-01-30 video recognition engine (sotsuken) #midterm due:2021-02-09
+2021-01-30 東京工業大学・教授の公募（ソフトウェア工学分野） #jobhunt due:2021-02-09
+2021-01-30 (J)MDPI.Sensors.IoT #deadlines due:2021-02-15
+2021-01-30 (J)MDPI.Signals.cybersec.resilience #deadlines due:2021-02-15
+2021-01-30 EAI.WiCOM.wireless #deadlines due:2021-02-15
+2021-01-30 IEEE.ACM.IWQoS.qos #deadlines due:2021-02-15
+2021-01-30 (J)JCN.covid19 #deadlines due:2021-02-20
+2021-01-30 (J)MDPI.Telecom.Journal #deadlines due:2021-02-21
+2021-01-30 (J)MDPI.mobile.computing #deadlines due:2021-02-21
+2021-01-30 LANMAN.networking.is.new.normal #deadlines due:2021-02-22
+2021-01-30 ⒿIEEEJ.intell.wireless.control.systems #deadlines due:2021-02-25
+2021-01-30 大阪大学・機械工学・情報学 #jobhunt due:2021-02-25
+2021-01-30 (J)Elsevier.ICN(blockchain.for.covid) #deadlines due:2021-02-28
+2021-01-30 jour.mdpi.vehicularfleets #deadlines due:2021-02-28
+2021-01-30 国際基督教大学・人間情報学・情報学フロンティアor情報学基礎 #jobhunt due:2021-02-28
+2021-01-30 国際基督教大学・情報学基礎、計算基盤（准教授、教授公募） #jobhunt due:2021-02-28
+2021-01-30 岩手大学・知能・メディア情報コース・准教授公募 #jobhunt due:2021-02-28
+2021-01-30 東京国際大学・教授、准教授、または講師の公募（データサイエンス、AI等分野） #jobhunt due:2021-02-28
+2021-01-30 株式会社ベイシスコンサルティング・リサーチャー募集 #jobhunt due:2021-02-28
+2021-01-30 (J)IEET.green.internet.and.services #deadlines due:2021-03-01
+2021-01-30 (J)Springer.queueing.learning.control #deadlines due:2021-03-01
+2021-01-30 adobe @ work, home #longterm due:2021-03-01
+2021-01-30 windows auth @ zaniya #longterm due:2021-03-01
+2021-01-30 ficloud.future.cloud #deadlines due:2021-03-10
+2021-01-30 ★青山学院大学・経済学部経済学科・統計学・データサイエンス #jobhunt due:2021-03-12
+2021-01-30 (J)MDPI.drone.swarms #deadlines due:2021-03-15
+2021-01-30 BRAINS.blockchain #deadlines due:2021-03-15
+2021-01-30 CloudConf.KSEM@tokyo #deadlines due:2021-03-15
+2021-01-30 KSEM.knowledge #deadlines due:2021-03-15
+2021-01-30 北海道大学・メディアネットワーク部門・情報通信システム学分野・教授 #jobhunt due:2021-03-19
+2021-01-30 香川大学・創造工学部 准教授・講師または助教の公募（情報通信コース） #jobhunt due:2021-03-19
+2021-01-30 ⒿIEEEsensors.inforpositioning #deadlines due:2021-03-21
+2021-01-30 IFIP.future.internet.transport #deadlines due:2021-03-25
+2021-01-30 ★東京理科大学・工学部情報工学科・インテリジェントシステム分野 #jobhunt due:2021-03-29
+2021-01-30 (J)JNSM.beyond5G #deadlines due:2021-03-30
+2021-01-30 (J)ACMIntTechJ.multiagent.systems.for.IoT #deadlines due:2021-03-31
+2021-01-30 (J)ACMtran.comp.ling.multimedia.IoT #deadlines due:2021-03-31
+2021-01-30 (J)Elsevier(edge.iot) #deadlines due:2021-03-31
+2021-01-30 (J)Elsevier.smart.veh.in.6G #deadlines due:2021-03-31
+2021-01-30 (J)IEEE.Sensors.indoor.positioning #deadlines due:2021-03-31
+2021-01-30 福岡大学工学部電子情報工学科 #jobhunt due:2021-03-31
+2021-01-30 鳥取大学工学部教員公募（ロボティクス） #jobhunt due:2021-03-31
+2021-01-30 ITC.teletraffic.congress #deadlines due:2021-04-02
+2021-01-30 香川大学・創造工学部・准教授または講師の公募（機械システムコース） #jobhunt due:2021-04-23
+2021-01-30 岩手大学・知能・メディア情報コース 准教授公募（知能情報学関連分野） #jobhunt due:2021-04-30
+2021-01-30 知能情報学関連分野 #jobhunt due:2021-04-30
+2021-01-30 ACM.GoodIT #deadlines due:2021-05-01
+2021-01-30 岡山理科大学・准教授・講師または助教（計算機工学，コンピュータシステム分野） #jobhunt due:2021-05-10
+2021-01-30 (J)wiley.SPE.highperfcomp.apps #deadlines due:2021-05-31
+2021-01-30 ⒿMDPI.HPC.math #deadlines due:2021-06-30
+2021-01-30 株式会社キーウォーカー【AI企業】自然言語処理研究員・エンジニア募集 #jobhunt due:2021-06-30
+2021-01-30 (J)BigDataJournal.perfmanagment.large.clusters #deadlines due:2021-07-31
